--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app",
-    "test": "mocha \"./{,!(node_modules)/**/}*.test.js\""
+    "test": "mocha main.test.js"
   },
   "author": "Guy Tsitsiashvili",
   "license": "ISC",
